[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mass"
version = "0.0.1"
dependencies = [
    "bitarray"
]

[project.scripts]
mass-log-dump = "mass.tools.log_dump:main"
mass-storage = "mass.tools.mass_storage:main"
mass-storage-toctou = "mass.tools.mass_storage_toctou:main"
