[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "usbracer"
version = "0.0.1"
dependencies = [
    "bitarray"
]

[project.scripts]
usbracer-log-dump = "usbracer.tools.log_dump:main"
usbracer-storage = "usbracer.tools.mass_storage:main"
usbracer-storage-toctou = "usbracer.tools.mass_storage_toctou:main"
