[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usbracer"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "bitarray"
]

[project.scripts]
usbracer-log-dump = "usbracer.tools.log_dump:main"
usbracer-storage = "usbracer.tools.mass_storage:main"
usbracer = "usbracer.tools.mass_storage_toctou:main"
